Change to maven project, fix java 17 issues